--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
     <nav>
@@ -25,6 +25,35 @@
     </nav>
 
 
+        <h1 id="heading" align="center">Meet the Team</h1>
+
+
+    <div id="about">
+
+        <div class="about">
+            <img class="imgAbout" src="img/about/majo.jpg" alt="">
+            <h2 class="infoName">Muaz Khalid</h2>
+            <h3>Co-founder & CTO</h3>
+        </div>
+    
+        <div class="about">
+            <img class="imgAbout" src="img/about/psycho.jpeg" alt="">
+            <h2 class="infoName">Hussnain Ahmad</h2>
+            <h3>Co-founder & CEO</h3>
+        </div>
+        <div class="about">
+            <img class="imgAbout" src="img/about/zobi.jpg" alt="">
+            <h2 class="infoName">Zohaib Saeed</h2>
+            <h3>Sweeper</h3>
+
+        </div>
+
+    </div>
+    <footer>
+        <h3>Developed by: Psycho, Zaibi & Majo</h3>
+    </footer>
+
+   
     
   
 </body>
